<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:title="@string/calendar_list_set_sync_interval"
          android:onClick="onSetSyncInterval"
          app:showAsAction="never"/>

    <item android:title="@string/calendar_list_synchronize"
          android:onClick="onRefreshRequested"
          app:showAsAction="never"/>

    <item android:id="@+id/force_dark_mode"
          android:title="@string/settings_force_dark_theme"
          android:checkable="true"
          android:onClick="onToggleDarkMode"
          app:showAsAction="never" />

    <item android:id="@+id/privacy_policy"
          android:title="@string/calendar_list_privacy_policy"
          android:onClick="onPrivacyPolicyRequested"
          app:showAsAction="never"/>

    <item android:title="@string/calendar_list_info"
          android:onClick="onShowInfo"
          app:showAsAction="never"/>

</menu>
