<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="ifRoom"
        android:onClick="onShare"
        android:title="@string/edit_calendar_send_url"
        android:icon="@drawable/ic_share"/>

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_close"
        android:id="@+id/cancel"
        android:onClick="onCancel"
        android:title="@string/edit_calendar_cancel"
        tools:ignore="AlwaysShowAction"/>

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        android:id="@+id/delete"
        android:onClick="onAskDelete"
        android:title="@string/edit_calendar_delete" />

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_check"
        android:id="@+id/save"
        android:onClick="onSave"
        android:title="@string/edit_calendar_save" />

</menu>