<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="model" type="at.bitfire.icsdroid.ui.CredentialsFragment.CredentialsModel"/>
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_calendar_requires_authentication"
            android:checked="@={model.requiresAuth}"/>

        <LinearLayout
            android:id="@+id/inputs"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="@string/add_calendar_user_name"
                android:singleLine="true"
                android:text="@={model.username}"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_calendar_password"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="@={model.password}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
